--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ matplotlib==3.2.2
 flasgger==0.9.4
 seaborn==0.9.0
 joblib==0.14.0
-Flask>=1.1.2
+Flask==1.1.2
 numpy==1.16.5
 pandas==1.0.4
 scikit_learn==0.22.2
